fix: sidebar links layout breaking

--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -70,20 +70,25 @@
     display: flex;
     flex-direction: column;
 
-    .entry {
-      border-radius: var(--border-radius);
-      color: inherit;
-      padding: 0.25em 1ch;
-      text-decoration: none;
-    }
+    .entry-list {
+      display: flex;
+      flex-direction: column;
 
-    .entry:first-of-type {
-      margin-top: 0.25em;
-    }
+      .entry {
+        border-radius: var(--border-radius);
+        color: inherit;
+        padding: 0.25em 1ch;
+        text-decoration: none;
+      }
 
-    .entry[data-active="true"] {
-      background-color: var(--color-primary);
-      color: var(--color-fg-on-primary);
+      .entry:first-of-type {
+        margin-top: 0.25em;
+      }
+
+      .entry[data-active="true"] {
+        background-color: var(--color-primary);
+        color: var(--color-fg-on-primary);
+      }
     }
   }
 
